# DataWishperer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  prompt.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sales_data.csv  test_e2e_pipeline.py  test_grok_agent.py  test_products.csv  test_smoke.py
.streamlit/: config.toml
backend/: __init__.py
backend/analytics/: __init__.py  data_profiler.py  data_quality.py  insights_engine.py  orchestrator.py  predictive.py  statistical.py
backend/core/: __init__.py  config.py  exceptions.py  logging_config.py  security.py
backend/llm/: __init__.py  agent.py  base_provider.py  factory.py  memory.py
backend/llm/chains/: __init__.py  output_parser.py  query_chain.py
backend/llm/prompts/: __init__.py  context_builder.py  correction_prompt.py  developer_prompt.py  few_shot.py  output_format_prompt.py  reflection_prompt.py  registry.py  retry_prompt.py  safety_prompt.py  system.py  system_prompt.py  user_prompt.py
backend/llm/providers/: __init__.py  failover_provider.py  grok_provider.py  groq_provider.py  ollama_provider.py
backend/models/: __init__.py  database.py  schemas.py
backend/sandbox/: __init__.py  executor.py  restrictions.py  validator.py
backend/services/: __init__.py  chat_service.py  export_service.py  file_service.py  session_service.py  visualization_service.py
backend/storage/: __init__.py  file_manager.py
backend/storage/repositories/: __init__.py  file_repo.py  message_repo.py  session_repo.py
backend/utils/: __init__.py  csv_analyzer.py  helpers.py
backend/visualization/: __init__.py  chart_explainer.py  chart_export.py  chart_generator.py  chart_selector.py  chart_themes.py
docs/: DEPLOY.md  INSTALL.md  OPTIMIZATION.md  TROUBLESHOOTING.md
frontend/: __init__.py  state.py  theme.py
frontend/components/: __init__.py  chat.py  explorer.py  export.py  home.py  sidebar.py  workspace.py
test_data/: e2e_verify.py  global_tech_sales_2024.csv  llm_pipeline_verify.py  security_verify.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_analytics_engine.py  test_coverage_boost.py  test_csv_edge_cases.py  test_error_handling.py  test_frontend.py  test_grok_failover.py  test_groq_failover.py  test_integration_agent.py  test_integration_analytics.py  test_llm_coverage.py  test_performance.py  test_prompt_architecture.py  test_sandbox_security.py  test_security.py  test_services_layer.py  test_storage_layer.py  test_unit_agent.py  test_unit_executor.py  test_unit_helpers.py  test_unit_memory.py  test_unit_validator.py  test_visualization_engine.py
